@@ -1,0 +1,9 @@
+#!/bin/sh
+
+if ! id -u "proof" >/dev/null 2>&1; then
+        adduser --system --group --home /home/proof --shell /bin/bash proof
+fi
+
+if ! grep -q /etc/sudoers.d/proof -e '%proof ALL=NOPASSWD: /opt/Opensoft/xinput_calibrator/xinput_calibrator --output-filename=/usr/share/X11/xorg.conf.d/99-calibration.conf' >/dev/null 2>&1; then
+        echo "%proof ALL=NOPASSWD: /opt/Opensoft/xinput_calibrator/xinput_calibrator --output-filename=/usr/share/X11/xorg.conf.d/99-calibration.conf" >> /etc/sudoers.d/proof
+fi
