@@ -1,0 +1,20 @@
+#!/bin/bash
+
+PACKAGE_NAME="proofstation-cutting"
+PROJECT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
+PROJECT_FILE="$PROJECT_DIR/proofstation-cutting.pro"
+VERSION="$(grep -e "VERSION\ =" $PROJECT_FILE | sed 's/^VERSION\ =\ \(.*\)/\1/')"
+MAINTAINER="Denis Kormalev <denis.kormalev@opensoftdev.com>"
+DESCRIPTION="Cutting Proof station.
+ Proof based implementation for ProFIT Cutting and Cutting assistant stations.
+ Cutting station uses press sheet templates from ProFIT as an input and demonstrates cutting courses for them step by step.
+ Cutting courses are generated with the ScissorHands Web Service (https://github.com/opensoft/ScissorHands-WS)
+"
+
+PREBUILD="
+export VERSION_CHECK_PATTERN='qt5:proof';
+export IGNORE_PACKAGES_PATTERN='fglrx';
+export PROOF_PATH=/opt/Opensoft/proof;
+export LD_LIBRARY_PATH=\$PROOF_PATH/lib;
+export QMAKEFEATURES=\$PROOF_PATH/features;
+"
