@@ -15,6 +15,8 @@ Build instructions:
     --with-gui=x11          Use native x11 GUI
 make
     Builds the software with the configured GUI
+    
+For building version with Qt frontend use .pro file and qmake
 
 Usage:
 ------
